--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nota Sejarah Tahun 4 Interaktif</title>
+    <title>Nota Interaktif Sejarah Tahun 4 by Cikgu Sal Sabila</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -62,8 +62,8 @@
         <!-- Sidebar Navigation -->
         <nav class="w-full md:w-64 bg-white md:h-screen md:sticky top-0 shadow-lg">
             <div class="p-6">
-                <h1 class="text-2xl font-bold text-blue-800">Sejarah Tahun 4</h1>
-                <p class="text-sm text-gray-500">Nota Interaktif KSSR</p>
+                <h1 class="text-2xl font-bold text-blue-800">Nota Sejarah Tahun 4</h1>
+                <p class="text-sm text-gray-500">by Cikgu Sal Sabila</p>
             </div>
             <ul class="mt-4" id="navigation">
                 <li><a href="#" class="nav-link active block py-3 px-6 text-gray-700 hover:bg-blue-500 hover:text-white transition duration-300" data-unit="1">Unit 1: Mengenali Sejarah</a></li>
@@ -858,4 +858,5 @@
     </script>
 </body>
 </html>
+
 
